# LinkGen-Insights

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml
crawlers/: linkedin.py
data/: omarsar_data.json
models/: json_source.py  posts.py  settings.py
notebooks/: retrieve.ipynb
src/: chain.py  embedding.py  flow.py  qdrant.py  retriever.py
