[tool.poetry]
name = "Real-time-Retrieval"
version = "0.1.0"
description = "A short description of your project"
authors = ["Harsimran Singh <harsimran1869@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
bytewax = "^0.21.0"
pydantic = "^2.9.2"
transformers = "^4.45.2"
torch = "^2.4.1"
qdrant-client = "^1.12.0"
unstructured = "^0.15.14"
langchain = "^0.3.3"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.2.0"
pillow = "^10.4.0"
umap-learn = "^0.5.6"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
pydantic-settings = "^2.5.2"
langchain-together = "^0.2.0"
streamlit = "^1.39.0"
selenium = "^4.25.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
